--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 		            </exclusion>
 	          </exclusions>
         </dependency>
+        <dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.1</version>
+		</dependency>
     </dependencies>
     
     <build>
