--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,8 +30,9 @@
         <activity android:name="de.uniluebeck.itm.dynamixsspbridge.ui.ContextItemView"></activity>
         <activity android:name="de.uniluebeck.itm.dynamixsspbridge.ui.ContextSubscriptionRequested"></activity>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.dynamix.DynamixConnectionService"></service>
+       <service android:name="de.uniluebeck.itm.coapserver.ManagerManager"></service>
        <service android:name="de.uniluebeck.itm.coapserver.CoapServerManager"></service>
-       <service android:name="de.uniluebeck.itm.htmlserver.HTMLServerManager"></service>
+       <service android:name="de.uniluebeck.itm.htmlserver.HTTPServerManager"></service>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.support.NotificationService"></service>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.StartService"></service>
         <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.UpdateManager"></service>
