--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,20 @@
 		    <scope>system</scope>
 		    <systemPath>${project.basedir}/lib/org.ambientdynamix.application.api_v0.9.59.jar</systemPath>
 		</dependency>
+		<dependency>
+		    <groupId>org.ambientdynamix.contextlibrary</groupId>
+		    <artifactId>org.ambientdynamix.contextlibrary</artifactId>
+		    <version>0.1</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/ContextInterfaceLibrary.jar</systemPath>
+		</dependency>
+		<dependency>
+		    <groupId>org.ambientdynamix.contextplugins.pingplugin_datatypes_1.0.0</groupId>
+		    <artifactId>org.ambientdynamix.contextplugins.pingplugin_datatypes_1.0.0</artifactId>
+		    <version>1.0.0</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/datatypes/org.ambientdynamix.contextplugins.pingplugin_datatypes_1.0.0.jar</systemPath>
+		</dependency>
 	    <dependency>
 	        <groupId>de.uniluebeck.itm</groupId>
 	        <artifactId>ncoap</artifactId>
@@ -65,6 +79,11 @@
 			<groupId>jdom</groupId>
 			<artifactId>jdom</artifactId>
 			<version>1.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.googlecode.java-diff-utils</groupId>
+		    <artifactId>diffutils</artifactId>
+		    <version>1.2.1</version>
 		</dependency>
     </dependencies>
     
