--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:required="true" android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:required="true" android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:required="true" android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 	
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -36,8 +39,12 @@
        <service android:name="de.uniluebeck.itm.htmlserver.HTTPServerManager"></service>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.support.NotificationService"></service>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.StartService"></service>
-        <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.UpdateManager"></service>
-       	<receiver android:name="de.uniluebeck.itm.dynamixsspbridge.core.StartUp">
+       <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.UpdateManager"></service>
+       <service android:name="de.uniluebeck.itm.dynamixbridge.discovery.internal.DiscoveryService"></service>
+       <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl"/>
+       
+       <receiver android:name="de.uniluebeck.itm.dynamixsspbridge.core.StartUp">
+       	    
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
         </intent-filter>
