updated from Dynamix 0.9.59 to dynamix 0.9.61 and to ncoap 1.0.2
trying to get RDF as a output format and make the app accept json as a
request format...

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,7 @@
        <activity android:name="de.uniluebeck.itm.dynamixsspbridge.ui.ContextItemView"></activity>
        <activity android:name="de.uniluebeck.itm.dynamixsspbridge.ui.ContextSubscriptionRequested"></activity>
        <activity android:name="de.uniluebeck.itm.dynamixsspbridge.ui.ContextUnsubscriptionRequested"></activity>
+       <activity android:name="de.uniluebeck.itm.dynamixsspbridge.ui.TolkenOverview"></activity>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.dynamix.DynamixConnectionService"></service>
        <service android:name="de.uniluebeck.itm.coapserver.ManagerManager"></service>
        <service android:name="de.uniluebeck.itm.coapserver.CoapServerManager"></service>
