--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,21 @@
 		    <artifactId>ambientdynamix</artifactId>
 		    <version>0.9.59</version>
 		    <scope>system</scope>
-		    <systemPath>${project.basedir}/lib/org.ambientdynamix.application.api_v0.9.59.jar</systemPath>
+		    <systemPath>${project.basedir}/lib/org.ambientdynamix.application.api_v0.9.61.jar</systemPath>
+		</dependency>
+		<dependency>
+		    <groupId>quick-json</groupId>
+		    <artifactId>quick-json</artifactId>
+		    <version>1.0.2.3</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/quick-json-1.0.2.3.jar</systemPath>
+		</dependency>
+		<dependency>
+		    <groupId>jena-core</groupId>
+		    <artifactId>jena-core</artifactId>
+		    <version>2.7.3</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/jena-core-2.7.3.jar</systemPath>
 		</dependency>
 		<dependency>
 		    <groupId>org.ambientdynamix.contextlibrary</groupId>
@@ -54,7 +68,7 @@
 	    <dependency>
 	        <groupId>de.uniluebeck.itm</groupId>
 	        <artifactId>ncoap</artifactId>
-	        <version>1.0.1</version>
+	        <version>1.0.2</version>
 	        	<exclusions>
 		            <exclusion>
 		              <groupId>org.slf4j</groupId>
@@ -65,7 +79,7 @@
      	<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.4</version>
+            <version>1.6.6</version>
         </dependency>
         <dependency>
             <groupId>com.strategicgains</groupId>
@@ -91,7 +105,7 @@
 		    <groupId>com.googlecode.java-diff-utils</groupId>
 		    <artifactId>diffutils</artifactId>
 		    <version>1.2.1</version>
-		</dependency>	  
+		</dependency>	 
     </dependencies>
     
     <build>
