--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,11 @@
     <uses-permission android:required="true" android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:required="true" android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:required="true" android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 	
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:required="true" android:name="android.permission.ACCESS_NETWORK_STATE" /> 	
+    <uses-permission android:required="true" android:name="android.permission.CHANGE_NETWORK_STATE" /> 	
+    <uses-permission android:required="true" android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:required="true" android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:required="true" android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -41,16 +42,23 @@
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.support.NotificationService"></service>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.StartService"></service>
        <service android:name="de.uniluebeck.itm.dynamixsspbridge.core.UpdateManager"></service>
-       <service android:name="de.uniluebeck.itm.dynamixbridge.discovery.DiscoveryService"></service>
+       <service android:name="de.uniluebeck.itm.dynamixbridge.networking.DiscoveryService"></service>
+       <service android:name="de.uniluebeck.itm.dynamixbridge.networking.WifiDirectService"></service>
        <service android:name="de.uniluebeck.itm.dynamixbridge.ssp.DynamixBridgeCoapClient"></service>
        <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl"/>
-       
+  
        <receiver android:name="de.uniluebeck.itm.dynamixsspbridge.core.StartUp">
-       	    
-        <intent-filter>
-            <action android:name="android.intent.action.BOOT_COMPLETED"/>
-        </intent-filter>
+        	<intent-filter>
+            	<action android:name="android.intent.action.BOOT_COMPLETED"/>
+        	</intent-filter>
     	</receiver>
+    	<receiver android:name="de.uniluebeck.itm.dynamixbridge.networking.WifiListener" >
+            <intent-filter>
+                <action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE" />
+                <action android:name="android.net.wifi.STATE_CHANGE" />
+            </intent-filter>
+        </receiver>
+  
     </application>
 
 </manifest>
