--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,20 @@
 			    <enabled>true</enabled>
 			</snapshots>
 	    </repository>
+	              <repository>
+                <id>itm-maven-repository-snapshots-site</id>
+                <url>https://maven.itm.uni-luebeck.de/content/repositories/snapshots/</url>
+                 <releases>
+		            <enabled>false</enabled>
+		            <updatePolicy>always</updatePolicy>
+		            <checksumPolicy>warn</checksumPolicy>
+		          </releases>
+              	<snapshots>
+                	<enabled>true</enabled>
+                	<updatePolicy>always</updatePolicy>
+                	<checksumPolicy>ignore</checksumPolicy>
+            	</snapshots>
+            </repository>
 	</repositories> 
 
     <dependencies>
@@ -43,7 +57,7 @@
 	    <dependency>
 	        <groupId>de.uniluebeck.itm</groupId>
 	        <artifactId>ncoap</artifactId>
-	        <version>1.0.2</version>
+	        <version>1.8.0-SNAPSHOT</version>
 	        	<exclusions>
 		            <exclusion>
 		              <groupId>org.slf4j</groupId>
